apps/ittools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ittools
  namespace: ittools
spec:
  selector:
    app: ittools
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: ittools
      protocol: TCP
      port: 80
      targetPort: 80
